css/stylesheet.css
body {
  font-family: 'Noto Sans', sans-serif;
  padding: 0;
  margin: 0;
  background-color: black;
  background-image: radial-gradient(ellipse at 50% 40%, navy, black);
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.center div {
  margin: 0;
  position: absolute;
  top: 40%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.vertical-menu a {
  display: block;
  padding: 12px 44px;
  margin-bottom: 6px;
  text-align: center;
  text-decoration: none;
  font-size: 18pt;
  border-radius: 6px;
  border: 2px solid #00c8ff;
  color: white;
  background-color: rgba(0, 0 , 70, .7);
}

.vertical-menu a:hover {
  color: #00c8ff;
  text-decoration: underline;
}

.vertical-menu a.active {
  color: #00c8ff;
}

.overlay {
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0, 0.9);
  overflow-x: hidden;
  transition: 0.0s;
}

.overlay-content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 24px;
  color: #818181;
  transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 15px;
  right: 30px;
  font-size: 48px;
}

@media screen and (max-height: 450px) {
  .overlay a {font-size: 20px}
  .overlay .closebtn {
  font-size: 40px;
  top: 15px;
  right: 35px;
  }
}

